# qtc-wallet

./: README.md  index.html  package.json  tauri.conf.json  vite.config.ts
src/: rpc.ts
src-tauri/: Cargo.toml
src-tauri/src/: App.tsx  main.rs
